cp project/force-app/main/default/objects/Follow_Up__c/Follow_Up__c.object-meta.xml
<CustomObject>
    <label>Follow Up</label>
    <pluralLabel>Follow Ups</pluralLabel>
    <nameField><displayFormat>FU-{000000}</displayFormat><label>Follow Up Number</label><type>AutoNumber</type></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>