cp project/force-app/main/default/objects/Follow_Up__c/fields/CP_ID__c.field-meta.xml
<CustomField>
    <fullName>CP_ID__c</fullName>
    <label>CP ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>