cp project/force-app/main/default/objects/Follow_Up__c/fields/Created_From_CP_App__c.field-meta.xml
<CustomField>
    <fullName>Created_From_CP_App__c</fullName>
    <label>Created From CP App</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>