cp project/force-app/main/default/objects/Follow_Up__c/fields/External_App_ID__c.field-meta.xml
<CustomField>
    <fullName>External_App_ID__c</fullName>
    <label>External App ID</label>
    <length>120</length>
    <type>Text</type>
    <externalId>true</externalId>
</CustomField>