cp project/force-app/main/default/objects/Follow_Up__c/fields/Follow_Up_Time__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Time__c</fullName>
    <label>Follow Up Time</label>
    <type>Time</type>
</CustomField>