cp project/force-app/main/default/objects/Follow_Up__c/fields/Sales_Executive__c.field-meta.xml
<CustomField>
    <fullName>Sales_Executive__c</fullName>
    <label>Sales Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Follow Ups</relationshipLabel>
    <relationshipName>Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>