cp project/force-app/main/default/objects/Follow_Up__c/listViews/My_Follow_Ups.listView-meta.xml
<ListView>
    <fullName>My_Follow_Ups</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Lead__c</columns>
    <columns>Follow_Up_Type__c</columns>
    <columns>Follow_Up_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Follow Ups</label>
</ListView>