cp project/force-app/main/default/objects/Follow_Up__c/listViews/Pending_Follow_Ups.listView-meta.xml
<ListView>
    <fullName>Pending_Follow_Ups</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Lead__c</columns>
    <columns>Follow_Up_Type__c</columns>
    <columns>Follow_Up_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Sales_Executive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Follow Ups</label>
</ListView>